--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -13,6 +13,8 @@
 *, body {
     box-sizing: border-box;
     font-family: bitter-regular;
+    background-color: black;
+    color: white;
 }
 
 h1, h2, h3, h4, h5, h6 {
