--- a/src/assets/styles/map-grid-item.scss
+++ b/src/assets/styles/map-grid-item.scss
@@ -3,7 +3,7 @@
 .map-grid-item {
     width: 40px;
     height: 40px;
-    background-color: black;
+    background-color: #070604;
     padding: 5px;
     display: inline-block;
     color: white;
